# AOC-haskell-template

./: AOC-haskell-template.cabal  CHANGELOG.md  README.md
common/AOC/: Common.hs
day1/: Main.hs
day12/: Main.hs
day13/: Main.hs
day17/: Main.hs
day24/: Main.hs
setup/: Main.hs
