cabal-version:      2.4
name:               aoc
version:            0.1.0.0

synopsis:           A template repository for solving Advent of Code problems with Haskell

-- A URL where users can report bugs.
bug-reports:        https://github.com/JakobBruenker/AOC-haskell-template

-- The license under which the package is released.
-- license:
author:             Jakob Bruenker
maintainer:         jbruenker@partner.eso.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  AOC.Common

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        Boolean,
        split,
        lens,
    hs-source-dirs:   common
    default-language: Haskell2010
    ghc-options:      -Wall
    
executable setup
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.0.0,
        directory
    hs-source-dirs:   setup
    default-language: Haskell2010
    
    ghc-options:      -Wall

executable day1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        Strict
    default-extensions:
        BangPatterns
        BinaryLiterals
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingVia
        DoAndIfThenElse
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        ImportQualifiedPost
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        PartialTypeSignatures
        PatternGuards
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilyDependencies
        TypeSynonymInstances
        ViewPatterns
    build-depends:
        base ^>=4.15.0.0,
        aoc,
        attoparsec,
        vector,
        containers,
        lens,
        text,

    hs-source-dirs:   day1
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-imports -fdefer-type-errors -fdefer-out-of-scope-variables
